--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -2,7 +2,6 @@
   @media screen and (min-width: $screen-large + 1) {
     background-image: url("https://static.wixstatic.com/media/e1c78c_6ae16d26be03488a93c6c91e40313df7.jpg/v1/fill/w_1863,h_740,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_6ae16d26be03488a93c6c91e40313df7.jpg");
     height: 740px;
-    text-align: center;
     font-size: 1.5rem;
   }
   text-align: center;
@@ -52,6 +51,17 @@ img.quotation {
   @media screen and (min-width: $screen-large + 1) {
     background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
     height: 664px;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+    height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
   }
   img {
     @media screen and (min-width: $screen-large + 1) {
