--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -153,9 +153,9 @@
   }
   @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
     background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-    background-size: cover;
+    background-size: cover; !important;
     height: 500px;
-    background-attachment: fixed;
+    background-attachment: fixed; !important;
   }
   background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
   background-size: cover;
