--- a/sass/main.css
+++ b/sass/main.css
@@ -32,6 +32,9 @@ h1 {
 .invisible {
   display: none; }
 
+.active-main-menu {
+  color: grey; }
+
 .container-main-menu {
   margin-bottom: 5px;
   margin-top: 30px; }
@@ -108,6 +111,8 @@ header {
         .main-menu ul li a {
           padding: 10px; } }
       .main-menu ul li a:hover {
+        color: grey; }
+      .main-menu ul li a.active-main-menu {
         color: grey; }
 
 .small-menu .small-menu--menu {
@@ -623,9 +628,12 @@ footer {
     font-size: 0.9rem; }
   footer .up-icon {
     margin: 30px 0 15px 0; }
-  footer a {
-    text-decoration: none;
-    color: #2F2E2E;
-    font-weight: 600; }
+  footer .back-to-top {
+    width: 200px;
+    margin: auto; }
+    footer .back-to-top a {
+      text-decoration: none;
+      color: #2F2E2E;
+      font-weight: 600; }
 
 /*# sourceMappingURL=main.css.map */
