menu-side for screen small

--- a/sass/main.css
+++ b/sass/main.css
@@ -636,4 +636,43 @@ footer {
       color: #2F2E2E;
       font-weight: 600; }
 
+.main-photo {
+  background-image: url("https://static.wixstatic.com/media/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg/v1/fill/w_980,h_639,al_t,q_85,usm_0.66_1.00_0.01/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg");
+  background-size: cover;
+  height: 300px; }
+  @media screen and (min-width: 601px) and (max-width: 768px) {
+    .main-photo {
+      height: 500px; } }
+  @media screen and (min-width: 769px) {
+    .main-photo {
+      height: 700px;
+      background-attachment: fixed;
+      background-position: center; } }
+
+.menu-side {
+  text-align: center;
+  border-bottom: 1px solid grey; }
+  .menu-side h1 {
+    font-size: 2.5rem; }
+  .menu-side h2 {
+    text-transform: uppercase;
+    margin-top: 90px;
+    font-family: "Old Standard TT", serif;
+    font-size: 1.3rem; }
+  .menu-side p {
+    margin: 15px 60px;
+    font-style: italic;
+    font-size: 0.9rem; }
+  .menu-side .line {
+    width: 30px;
+    height: 30px;
+    border-top: 2px solid grey;
+    margin: auto; }
+  .menu-side .dish {
+    text-transform: uppercase;
+    color: black;
+    font-size: 1.0rem;
+    font-weight: 600;
+    margin: 30px 60px; }
+
 /*# sourceMappingURL=main.css.map */
