--- a/sass/main.css
+++ b/sass/main.css
@@ -639,19 +639,20 @@ footer {
 .main-photo {
   background-image: url("https://static.wixstatic.com/media/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg/v1/fill/w_980,h_639,al_t,q_85,usm_0.66_1.00_0.01/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg");
   background-size: cover;
-  height: 300px; }
+  height: 300px;
+  background-attachment: fixed;
+  background-position: center; }
   @media screen and (min-width: 601px) and (max-width: 768px) {
     .main-photo {
       height: 500px; } }
   @media screen and (min-width: 769px) {
     .main-photo {
-      height: 700px;
-      background-attachment: fixed;
-      background-position: center; } }
+      height: 650px; } }
 
 .menu-side {
   text-align: center;
-  border-bottom: 1px solid grey; }
+  border-bottom: 1px solid grey;
+  padding-bottom: 60px; }
   .menu-side h1 {
     font-size: 2.5rem; }
   .menu-side h2 {
@@ -674,5 +675,14 @@ footer {
     font-size: 1.0rem;
     font-weight: 600;
     margin: 30px 60px; }
+    @media screen and (min-width: 769px) {
+      .menu-side .dish {
+        margin: 30px 15px; } }
+
+@media screen and (min-width: 769px) {
+  .dish-wrapper {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top; } }
 
 /*# sourceMappingURL=main.css.map */
