connect menu side with index.html

--- a/sass/components/_main-menu.scss
+++ b/sass/components/_main-menu.scss
@@ -64,6 +64,8 @@ header {
     background: none;
     padding: $common-padding/3 $common-padding/2;
     margin-right: $common-padding/2;
+    cursor: pointer;
+
   }
 
   .small-menu {
