--- a/sass/components/_menus-side.scss
+++ b/sass/components/_menus-side.scss
@@ -1,3 +1,7 @@
+.menu-side-container {
+  display: none;
+}
+
 .main-photo {
   background-image: url("https://static.wixstatic.com/media/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg/v1/fill/w_980,h_639,al_t,q_85,usm_0.66_1.00_0.01/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg");
   background-size: cover;
