--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -144,6 +144,7 @@
     background: none;
     padding: $common-padding/3 $common-padding;
     margin: $common-padding/2 0;
+    cursor: pointer;
   }
 }
 
