--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -63,10 +63,7 @@ img.quotation {
     background-repeat: no-repeat;
     overflow: hidden;
   }
-  img {
-    @media screen and (min-width: $screen-large + 1) {
-      display: none;
-    }
-    width: 100%;
-  }
+  background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+  height: 300px;
+  background-size: cover;
 }
