--- a/sass/components/_menus-side.scss
+++ b/sass/components/_menus-side.scss
@@ -6,8 +6,8 @@
   background-image: url("https://static.wixstatic.com/media/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg/v1/fill/w_980,h_639,al_t,q_85,usm_0.66_1.00_0.01/e1c78c_e2f79a3c2b314f9da57e066a298065ab.jpg");
   background-size: cover;
   height: 300px;
-  background-attachment: fixed;
-  background-position: center;
+  //background-attachment: fixed;
+  //background-position: center;
   @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
     height: 500px;
   }
