--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -71,9 +71,9 @@
     background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
     overflow: hidden;
     padding-top: $common-padding*4;
-    height: 867px;
-    background-attachment: fixed;
-    background-size: cover;
+    height: 760px;
+    //background-attachment: fixed;
+    //background-size: cover;
     background-position: center;
   }
   text-align: center;
@@ -167,10 +167,12 @@
   @media screen and (min-width: $screen-large + 1) {
     background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
     background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 800px;
+    //background-attachment: fixed;
+    //background-position: center;
+    //background-repeat: no-repeat;
+    overflow: hidden;
+    position: relative;
+    height: 750px;
     width: 100%;
   }
 }
