--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -49,18 +49,18 @@ img.quotation {
 
 .review-image {
   @media screen and (min-width: $screen-large + 1) {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
-    height: 664px;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_713,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+    height: 500px;
+    //background-position: center;
+    //background-size: cover;
+    //background-attachment: fixed;
   }
   @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
     background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
     height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+    //background-attachment: fixed;
+    //background-position: center;
+    //background-repeat: no-repeat;
     overflow: hidden;
   }
   background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
