--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -68,19 +68,32 @@
 
 .second-menu {
   @media screen and (min-width: $screen-large + 1) {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
     overflow: hidden;
-    padding-top: $common-padding*4;
+    position: relative;
+    //overflow: hidden;
     height: 760px;
     //background-attachment: fixed;
     //background-size: cover;
-    background-position: center;
+    //background-position: center;
   }
   text-align: center;
+
+  .background {
+    @media screen and (min-width: $screen-large + 1) {
+      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: -1;
+
+    }
+  }
 
   & .container {
     @media screen and (min-width: $screen-large + 1) {
       width: $container-width/2;
+      padding-top: $common-padding*4;
+
     }
   }
 
@@ -153,26 +166,53 @@
     display: none;
   }
   @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-    background-size: cover;
+    background-image: none;
+    position: relative;
+    //background-size: cover;
     height: 500px;
-    background-attachment: fixed;
+    overflow: hidden;
+    //background-attachment: fixed;
   }
   background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
   background-size: cover;
   height: 300px;
+  position: relative;
+}
+
+.second-menu-img {
+  .background {
+    @media screen and (min-width: $screen-medium + 1) and (max-width: $screen-large) {
+      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: -1;
+
+    }
+  }
 }
 
 .restaurant-menus {
   @media screen and (min-width: $screen-large + 1) {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
-    background-size: cover;
-    //background-attachment: fixed;
-    //background-position: center;
-    //background-repeat: no-repeat;
-    overflow: hidden;
-    position: relative;
+    //background-size: cover;
+    ////background-attachment: fixed;
+    ////background-position: center;
+    ////background-repeat: no-repeat;
+    //overflow: hidden;
+    //position: relative;
     height: 750px;
     width: 100%;
+    position: relative;
+    overflow: hidden;
+  }
+  .background {
+    @media screen and (min-width: $screen-large + 1) {
+      background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
+      height: 100%;
+      width: 100%;
+      z-index: -1;
+      position: absolute;
+
+    }
   }
 }
