--- a/sass/main.css
+++ b/sass/main.css
@@ -289,13 +289,31 @@ img.quotation {
   background-size: cover; }
   @media screen and (min-width: 769px) {
     .review-image {
-      background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_713,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
-      height: 500px; } }
+      background-image: none;
+      height: 500px;
+      position: relative;
+      overflow: hidden; } }
   @media screen and (min-width: 601px) and (max-width: 768px) {
     .review-image {
-      background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+      position: relative;
+      background-image: none;
       height: 500px;
       overflow: hidden; } }
+
+@media screen and (min-width: 769px) {
+  .review-image .background {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_713,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1; } }
+@media screen and (min-width: 601px) and (max-width: 768px) {
+  .review-image .background {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    position: absolute; } }
 
 .chef-img {
   background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
@@ -391,14 +409,20 @@ img.quotation {
   text-align: center; }
   @media screen and (min-width: 769px) {
     .second-menu {
-      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
       overflow: hidden;
-      padding-top: 120px;
-      height: 760px;
-      background-position: center; } }
+      position: relative;
+      height: 760px; } }
+  @media screen and (min-width: 769px) {
+    .second-menu .background {
+      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      z-index: -1; } }
   @media screen and (min-width: 769px) {
     .second-menu .container {
-      width: 475px; } }
+      width: 475px;
+      padding-top: 120px; } }
   .second-menu .second-menu-information {
     padding: 0 15px; }
     @media screen and (min-width: 769px) {
@@ -449,25 +473,39 @@ img.quotation {
 .second-menu-img {
   background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
   background-size: cover;
-  height: 300px; }
+  height: 300px;
+  position: relative; }
   @media screen and (min-width: 769px) {
     .second-menu-img {
       display: none; } }
   @media screen and (min-width: 601px) and (max-width: 768px) {
     .second-menu-img {
-      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-      background-size: cover;
+      background-image: none;
+      position: relative;
       height: 500px;
-      background-attachment: fixed; } }
+      overflow: hidden; } }
+
+@media screen and (min-width: 601px) and (max-width: 768px) {
+  .second-menu-img .background {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1; } }
 
 @media screen and (min-width: 769px) {
   .restaurant-menus {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
-    background-size: cover;
-    overflow: hidden;
-    position: relative;
     height: 750px;
-    width: 100%; } }
+    width: 100%;
+    position: relative;
+    overflow: hidden; } }
+@media screen and (min-width: 769px) {
+  .restaurant-menus .background {
+    background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    position: absolute; } }
 
 .title-container {
   position: absolute;
