--- a/sass/main.css
+++ b/sass/main.css
@@ -124,10 +124,13 @@ header {
     .small-menu .small-menu--menu {
       display: none; } }
 
-@media screen and (min-width: 769px) {
-  .small-menu .small-menu--menu,
-  .small-menu .small-menu--icons {
-    display: none; } }
+.small-menu .small-menu--menu,
+.small-menu .small-menu--icons {
+  text-align: left; }
+  @media screen and (min-width: 769px) {
+    .small-menu .small-menu--menu,
+    .small-menu .small-menu--icons {
+      display: none; } }
 
 .icons {
   display: none;
@@ -284,36 +287,35 @@ img.quotation {
       margin-bottom: 30px; } }
 
 .review-image {
-  background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
-  height: 300px;
-  background-size: cover; }
+  display: none; }
   @media screen and (min-width: 769px) {
     .review-image {
-      background-image: none;
+      display: block;
       height: 500px;
       position: relative;
-      overflow: hidden; } }
-  @media screen and (min-width: 601px) and (max-width: 768px) {
-    .review-image {
-      position: relative;
-      background-image: none;
-      height: 500px;
       overflow: hidden; } }
 
 @media screen and (min-width: 769px) {
   .review-image .background {
+    display: block;
     background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_713,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
     height: 100%;
     width: 100%;
     position: absolute;
     z-index: -1; } }
-@media screen and (min-width: 601px) and (max-width: 768px) {
-  .review-image .background {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    position: absolute; } }
+
+.review-image-small-screen {
+  background-image: url("https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_1863,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg");
+  height: 300px;
+  background-size: cover; }
+  @media screen and (min-width: 601px) and (max-width: 768px) {
+    .review-image-small-screen {
+      position: relative;
+      height: 500px;
+      overflow: hidden; } }
+  @media screen and (min-width: 769px) {
+    .review-image-small-screen {
+      display: none; } }
 
 .chef-img {
   background-image: url("https://static.wixstatic.com/media/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg/v1/fill/w_1066,h_682,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_a5a164acd00a4ae7940be550e4915303.jpg");
@@ -412,13 +414,16 @@ img.quotation {
       overflow: hidden;
       position: relative;
       height: 760px; } }
-  @media screen and (min-width: 769px) {
-    .second-menu .background {
-      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      z-index: -1; } }
+  .second-menu .background {
+    display: none; }
+    @media screen and (min-width: 769px) {
+      .second-menu .background {
+        display: block;
+        background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_1863,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: -1; } }
   @media screen and (min-width: 769px) {
     .second-menu .container {
       width: 475px;
@@ -471,27 +476,25 @@ img.quotation {
         margin: 30px 0; } }
 
 .second-menu-img {
-  background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_320,h_267,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+  background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
   background-size: cover;
-  height: 300px;
-  position: relative; }
+  height: 300px; }
   @media screen and (min-width: 769px) {
     .second-menu-img {
       display: none; } }
   @media screen and (min-width: 601px) and (max-width: 768px) {
     .second-menu-img {
-      background-image: none;
-      position: relative;
-      height: 500px;
-      overflow: hidden; } }
+      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+      background-size: cover;
+      height: 500px; } }
+  @media screen and (min-width: 441px) and (max-width: 600px) {
+    .second-menu-img {
+      background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
+      background-size: cover;
+      height: 400px; } }
 
-@media screen and (min-width: 601px) and (max-width: 768px) {
-  .second-menu-img .background {
-    background-image: url("https://static.wixstatic.com/media/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg/v1/fill/w_980,h_867,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_cfd8fa1d16904a849e8f86d8e3bb3829.jpg");
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1; } }
+.restaurant-menus .background {
+  display: none; }
 
 @media screen and (min-width: 769px) {
   .restaurant-menus {
@@ -501,6 +504,7 @@ img.quotation {
     overflow: hidden; } }
 @media screen and (min-width: 769px) {
   .restaurant-menus .background {
+    display: block;
     background-image: url("https://static.wixstatic.com/media/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg/v1/fill/w_1863,h_828,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_823b4e996eb74e60b4505f1dc7b725f3.jpg");
     height: 100%;
     width: 100%;
@@ -546,9 +550,29 @@ img.quotation {
     .video-container {
       max-height: 850px; } }
   .video-container video {
-    width: 100%;
-    display: block;
-    position: relative; }
+    display: none; }
+    @media screen and (min-width: 601px) and (max-width: 768px) {
+      .video-container video {
+        width: 100%;
+        display: block;
+        position: relative; } }
+    @media screen and (min-width: 769px) {
+      .video-container video {
+        width: 100%;
+        display: block;
+        position: relative; } }
+
+.video-img {
+  background-image: url("https://static.wixstatic.com/media/e1c78c_a319e41376c84e2884de1b518bc0e79ff000.jpg/v1/fill/w_868,h_720,al_c,q_85/e1c78c_a319e41376c84e2884de1b518bc0e79ff000.webp");
+  height: 300px;
+  width: 100%;
+  background-size: cover; }
+  @media screen and (min-width: 601px) and (max-width: 768px) {
+    .video-img {
+      display: none; } }
+  @media screen and (min-width: 769px) {
+    .video-img {
+      display: none; } }
 
 .slider {
   display: none; }
